<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/facility_details_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Facility Details:"
        android:textStyle="bold"
        android:textColor="@color/space_cadet"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:minHeight="40dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="Facility Name:"
            android:textSize="20sp"
            android:textColor="@color/space_cadet"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/facility_details_edittext_facility_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:hint="Required"
            android:textColorHint="@color/white"
            android:layout_gravity="center"
            android:paddingHorizontal="10dp"
            android:maxLines="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:minHeight="40dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:text="Location:"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/facility_details_edittext_location"
            android:hint="Required"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:minHeight="40dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Phone Number:" />
        <EditText
            android:id="@+id/facility_details_edittext_phone_number"
            android:hint="Optional"
            android:maxLines="1"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
            android:paddingHorizontal="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:minHeight="40dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="Email Address:"/>
        <EditText
            android:id="@+id/facility_details_edittext_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
            android:paddingHorizontal="10dp"
            android:hint="Required" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:minHeight="40dp">

        <TextView
            android:text="Person Capacity:"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:textColor="@color/space_cadet"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/facility_details_edittext_capacity"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_corner_background"
            android:backgroundTint="@color/indigo"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:paddingHorizontal="10dp"
            android:hint="Required"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:minHeight="40dp">

        <Button
            android:id="@+id/facility_details_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm"
            android:textColor="@color/black"
            android:backgroundTint="@color/green1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="2.5dp" />

        <Button
            android:id="@+id/facility_details_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textColor="@color/white"
            android:backgroundTint="@color/red1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            app:strokeWidth="2.5dp"/>

        <Button
            android:id="@+id/facility_details_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/space_cadet"
            android:text="Delete"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/facility_details_cancel_button"
            app:layout_constraintStart_toEndOf="@+id/facility_details_confirm_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:strokeColor="@color/black"
            app:strokeWidth="2.5dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>